* Allow specification of build and state attributes for baselines created with Synergy 6.4+ (CC-860). Patch by David Corley
* Log now captures CR Synopsis text when <cmsynergy> is used (CC-903). Patch by David Corley
* Add attribute in cmsynergysessionmonitor node (remoteclient) for remote-client connection in cm synergy (CC-910). Patch by Keith Mendoza

JNLPPublisher
----------------------
* A plugin that publishes the built jar into a folder and updates a jnlp file. Needs unit tests, documentation in configxml.html, and a new entry in default-plugins.properties (CC-917). Patch by Nuno da Costa Ferro.

Log
----------------------
* Add new attribute to Log element: trimWhitespace - if true, trim whitespace from start and end of log lines.
  Primarily intended only to force historic "trim" behavior. Defaults to false. (CC-912) Patch by Sebastian Koppehel.

Origo Publisher
----------------------
* Update to use new issue handling API. Patch by Patrick Ruckstuhl.

Rake Builder
----------------------
* Make the Ruby executable and the Rake executable configurable (CC-904). Patch by Florian Gilcher.

Removed deprecated classes
----------------------
* removed CruiseControl (old launch wrapper)
* removed net.sourceforge.cruisecontrol.SelfConfiguringPlugin 
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusFTPBootstrapper
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusFTPPublisher

Removed deprecated methods
----------------------
* Main, P4Bootstrapper, Log, ModificationSet 

SVN
----------------------
* SVN externals not parsed correctly where multiple spaces exist as separator (CC-949). Patch by Andy Jacobs.

TwitterPublisher
----------------------
* Add a new plugin for publishing build results to Twitter.

UCM
----------------------